--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=sa
+# spring.mvc.static-path-pattern=/app-resources/**
 
+# ## default connection pool
+# spring.datasource.hikari.connectionTimeout=20000
+# spring.datasource.hikari.maximumPoolSize=5
+
+# ## PostgreSQL
+# spring.datasource.url=jdbc:postgresql://postgres:5432/demo_db
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.username=postgres
+# spring.datasource.password=password
+# spring.jpa.hibernate.ddl-auto=none
